# Computational-Physics-Toolkit

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  FEATURE.md  LICENSE  README.md  SDE.c
docs/: bw_docs.md  linear_mesh.md  planar_mesh.md
gists/: get_pwd.c  read_file.c
include/: fem2d.h  geom.h  imesh.h  mesh.h  rk4.h  toolkit.h  utils.h  vec.h
python/: Toolkit.py  main.py  mesh.c  mesh_test.c  meshes.py  printf.py
src/: fem2d.c  file.txt  geom.c  imesh.c  main.c  mesh.c  sde.c  utils.c  vec.c
tests/: How-To-Compile.md  exect  fem2d_test.c  mesh_test.c  meshes.py  sde_tests.c  sde_text.c  test.c  triangles.txt
